# MicroPython_MMR902

./: README.rst  examples.json  package.json  pyproject.toml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: mmr902_operation_mode.py  mmr902_simpletest.py
micropython_mmr902/: mmr902.py
